# docnsrt

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.md  config.yaml  prompt.yaml  pyproject.toml  pytest.ini
.github/workflows/: test-and-lint.yml
docs/: Configuration.md  Install.md
src/docmancer/: __main__.py  config.py
src/docmancer/core/: cli.py  engine.py  functional_context_database.py  languages.py  logging_config.py  pipeline.py  presenter.py  styles.py
src/docmancer/formatter/: csharp_formatters.py  formatter_base.py  formatter_factory.py  python_formatters.py
src/docmancer/generators/: documentation_generators.py
src/docmancer/generators/llm/: llm_agent_base.py  llm_agent_factory.py  local_agent.py  prompt.py  web_agent.py
src/docmancer/models/: docstring_models.py  documentation_model.py  formatted_summary_model.py  function_context.py  function_summary.py  functional_models.py
src/docmancer/parser/: csharp_parser.py  parser_base.py  parser_factory.py  python_parser.py
src/docmancer/utils/: file_utils.py  json_utils.py  platform_utils.py
src/docnsrt/: __main__.py  config.py
src/docnsrt/core/: cli.py  generator.py  languages.py  logging_config.py  models.py  pipeline.py  presenter.py  styles.py
src/docnsrt/formatter/: csharp_formatters.py  formatter_base.py  formatter_factory.py  python_formatters.py
src/docnsrt/models/: docstring_models.py  documentation_model.py  formatted_summary_model.py  function_context.py  function_summary.py  functional_models.py
src/docnsrt/parsers/: csharp_parser.py  parser_base.py  parser_factory.py  python_parser.py
src/docnsrt/utils/: file_utils.py
tests/scripts/: mock_openai_server.py
tests/test_projects/csharp/: .docmancer.yaml  .docnsrt.yaml  prompt.yaml
tests/test_projects/csharp/src/: source_1.cs
tests/test_projects/python/: .docmancer.yaml  .docnsrt.yaml  prompt.yaml
tests/test_projects/python/src/: source_1.py
tests/unit/: test_config.py
tests/unit/core/: test_cli.py
tests/unit/formatter/: test_csharp_formatter.py  test_py_formatter.py
tests/unit/generator/llm/: test_prompt.py  test_web_agent.py
tests/unit/parser/: test_csharp_parser.py  test_python_parser.py
(+1 files in other folders)
